# equality-constraint-LQR-compare

./: CMakeLists.txt  README.md  compare_close_loop.eps  compare_close_loop.fig  compare_close_loop_2.eps  compare_equally_constrained.fig  compare_over_constrained.fig  compare_under_constrained.fig  cost_constraint_compare.eps  cost_constraint_compare_3.eps  cross_time_step.eps  cross_time_step_no.eps  ecLQR_KKT.m  ecLQR_fg.m  ecLQR_fg_cross.m  ecLQR_laine.m  ecLQR_laine.prj  ecLQR_qp.m  ecLQR_sid  ecLQR_sideris.m  getConViolate.m  getCost.m  getCost_2.m  simple_2d_system.m  simple_2d_system_2.m  simple_2d_system_cross_time.m  simple_2d_system_drawing_for_paper.m  simple_2d_system_over_constrained.m  simple_2d_system_state_and_control.m  simple_2d_system_state_only.m  simple_2d_system_under_constrained.m  test.csv  three_by_three_system_state_and_control.m  three_by_three_system_state_only.m  three_by_two.csv  three_by_twoB1001002.csv  three_by_two_system_state_and_control.m
codegen/lib/ecLQR_laine/: codedescriptor.dmr  defines.txt  ecLQR_laine.cpp  ecLQR_laine.h  ecLQR_laine_data.cpp  ecLQR_laine_data.h  ecLQR_laine_initialize.cpp  ecLQR_laine_initialize.h  ecLQR_laine_rtw.mk  ecLQR_laine_terminate.cpp  ecLQR_laine_terminate.h  ecLQR_laine_types.h  mldivide.cpp  mldivide.h  mtimes.cpp  mtimes.h  pinv.cpp  pinv.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  svd.cpp  svd.h  svd1.cpp  svd1.h  tic.cpp  tic.h  timeKeeper.cpp  timeKeeper.h  toc.cpp  toc.h  xaxpy.cpp  xaxpy.h  xdotc.cpp  xdotc.h  xgeqp3.cpp  (+9 more)
codegen/lib/ecLQR_laine/examples/: main.cpp  main.h
codegen/lib/ecLQR_laine/html/: report.mldatx
codegen/lib/ecLQR_laine/interface/: _coder_ecLQR_laine_api.c  _coder_ecLQR_laine_api.h  (+2 more)
eliminationTests/: eliminate_partial_dQR.m  main.m  partialQR.m
scripts/: laine_benchmarks.cpp  simple_2d_system.cpp  three_by_three_system_state_and_control.cpp
src/: EcLqrParams.h  EcLqr_fg-impl.h  EcLqr_fg.h  EcLqr_laine-impl.h  EcLqr_laine.h  Lti-impl.h  Lti.cpp  Lti.h
tests/: exampleProblems.h  testEcLqr_fg.cpp  testEcLqr_laine.cpp  testLti.cpp
tests/data/: simple_2d_system.h  three_by_three_system_state_and_control.h
tikz/: generate_graph_latex.py
(+1 files in other folders)
